added model mapper only on comment model and comment dto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.mail.username=11d21839d143b3
 spring.mail.password=9c06160aeb350a
 spring.mail.protocol=smtp
 
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
